<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="650dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/background_card_view"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/image_user"
                    android:layout_width="@dimen/default_imagev_size"
                    android:layout_height="@dimen/default_imagev_size"
                    android:layout_marginTop="@dimen/big_margin"
                    android:src="@drawable/ic_person"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_user"
                    tools:text="Bigoh"
                    android:textSize="22sp"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

                <TextView
                    android:id="@+id/tv_user_comapny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/text_default_company"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
                    android:textSize="18sp"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

                <ImageView
                    android:id="@+id/icon_facebook"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view"
                    app:srcCompat="@drawable/img_facebook" />

                <ImageView
                    android:id="@+id/icon_twitter"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icon_facebook"
                    app:srcCompat="@drawable/img_twitter" />

                <ImageView
                    android:id="@+id/icon_github"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icon_twitter"
                    app:srcCompat="@drawable/img_github" />


                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/big_margin"
                    android:background="@color/background_card_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_user_comapny" />


                <TextView
                    android:id="@+id/tv_facebook"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:text="BigoDevOne"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.055"
                    app:layout_constraintStart_toEndOf="@+id/icon_facebook"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <TextView
                    android:id="@+id/tv_twitter"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:text="Carlos_Sánchez"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.055"
                    app:layout_constraintStart_toEndOf="@+id/icon_twitter"
                    app:layout_constraintTop_toBottomOf="@+id/tv_facebook" />

                <TextView
                    android:id="@+id/tv_gitHub"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:text="Bigoh20"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.055"
                    app:layout_constraintStart_toEndOf="@+id/icon_github"
                    app:layout_constraintTop_toBottomOf="@+id/tv_twitter" />


                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/big_margin"
                    android:background="@color/background_card_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_gitHub" />

                <TextView
                    android:id="@+id/tv_description"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/big_margin"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:text="@string/description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/Fab_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/fab_add_basic_info"
                    app:icon="@drawable/ic_add"
                    android:layout_margin="@dimen/default_margin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_description" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/Fab_more_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/fab_add_avanced_info"
                    app:icon="@drawable/ic_add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toEndOf="@id/Fab_info"
                    app:layout_constraintTop_toBottomOf="@+id/tv_description" />





            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>